<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/relativeLayout"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/dim_5dp"
                android:layout_alignParentRight="true">

                <ImageView
                    android:id="@+id/imageUpdateTicket"
                    android:layout_width="@dimen/dim_40dp"
                    android:layout_height="@dimen/dim_40dp"
                    android:padding="@dimen/dim_5dp"
                    android:src="@drawable/update" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativeLayoutTicketDetails"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/dim_10dp"
                android:layout_below="@+id/relativeLayout">

                <LinearLayout
                    android:id="@+id/linearLayoutTicketNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:weightSum="3">

                    <TextView
                        android:id="@+id/textViewTicketNo"
                        style="@style/text_regular_black"
                        android:textStyle="bold"
                        android:text="@string/ticketNo"
                        android:layout_weight="1"/>

                    <TextView
                        android:id="@+id/textviewTicketNoValue"
                        style="@style/text_regular_black"
                        android:text=""
                        android:layout_weight="2"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayoutDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:layout_below="@id/linearLayoutTicketNo">

                    <TextView
                        android:id="@+id/textviewDate"
                        style="@style/text_regular_black"
                        android:textStyle="bold"
                        android:layout_weight="1"
                        android:text="@string/ticket_date"/>

                    <TextView
                        android:id="@+id/textviewDateValue"
                        style="@style/text_regular_black"
                        android:layout_weight="2"
                        android:text=""/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayoutFault"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:layout_below="@id/linearLayoutDate">

                    <TextView
                        android:id="@+id/textViewFault"
                        style="@style/text_regular_black"
                        android:textStyle="bold"
                        android:layout_weight="1"
                        android:text="@string/fault"/>

                    <TextView
                        android:id="@+id/textViewFaultValue"
                        style="@style/text_regular_black"
                        android:layout_weight="2"
                        android:text=""/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayoutDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:layout_below="@id/linearLayoutFault">

                    <TextView
                        android:id="@+id/textviewDescription"
                        style="@style/text_regular_black"
                        android:textStyle="bold"
                        android:layout_weight="1"
                        android:text="@string/ticket_description"/>

                    <TextView
                        android:id="@+id/textviewDescriptionValue"
                        style="@style/text_regular_black"
                        android:layout_weight="2"
                        android:text=""/>

                </LinearLayout>

            </RelativeLayout>

            <TextView
                android:id="@+id/textviewStatusDetails"
                style="@style/text_regular_black"
                android:padding="5dp"
                android:layout_marginLeft="@dimen/dim_20dp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ticket_status_details"
                android:layout_below="@+id/relativeLayoutTicketDetails"/>

            <RelativeLayout
                android:id="@+id/relativeLayoutStatusDetails"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/dim_40dp"
                android:layout_below="@+id/textviewStatusDetails">

                <LinearLayout
                    android:id="@+id/linearLayoutStatusDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:weightSum="3">

                    <TextView
                        android:id="@+id/textviewStatusDate"
                        style="@style/text_regular_black"
                        android:textStyle="bold"
                        android:text="@string/ticket_date"/>

                    <TextView
                        android:id="@+id/textviewStatusDateValue"
                        style="@style/text_regular_black"
                        android:text=""/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayoutTicketStatus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:layout_below="@id/linearLayoutStatusDate">

                    <TextView
                        android:id="@+id/textviewTicketStatus"
                        style="@style/text_regular_black"
                        android:textStyle="bold"
                        android:text="@string/ticket_status"/>

                    <TextView
                        android:id="@+id/textviewTicketStatusValue"
                        style="@style/text_regular_black"
                        android:text=""/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayoutDependencyCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:visibility="gone"
                    android:layout_below="@id/linearLayoutTicketStatus">

                    <TextView
                        android:id="@+id/textViewDependencyCode"
                        style="@style/text_regular_black"
                        android:textStyle="bold"
                        android:text="@string/ticket_dependency_code"/>

                    <TextView
                        android:id="@+id/textViewDependencyCodeValue"
                        style="@style/text_regular_black"
                        android:text=""/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayoutResolutionCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:visibility="gone"
                    android:layout_below="@id/linearLayoutDependencyCode">

                    <TextView
                        android:id="@+id/textviewResolutionCode"
                        style="@style/text_regular_black"
                        android:textStyle="bold"
                        android:text="@string/ticket_resolution_code"/>

                    <TextView
                        android:id="@+id/textviewResolutionCodeValue"
                        style="@style/text_regular_black"
                        android:text=""/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayoutBroadCategory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:visibility="gone"
                    android:layout_below="@id/linearLayoutResolutionCode">

                    <TextView
                        android:id="@+id/textviewBroadCategory"
                        style="@style/text_regular_black"
                        android:textStyle="bold"
                        android:text="@string/ticket_broad_category"/>

                    <TextView
                        android:id="@+id/textviewBroadCategoryValue"
                        style="@style/text_regular_black"
                        android:text=""/>

                </LinearLayout>

            </RelativeLayout>


        </RelativeLayout>
    </ScrollView>
</RelativeLayout>